2009-11-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Fixed bug #2894950.
	
	* lib/PandoraFMS/DataServer.pm: Fixed bug #2894737.

2009-11-08  Sancho Lerena <slerena@artica.es>

	* util/pandora_checkdep.pl: Deleted old dep checker, not used anymore.
	
	* pandora_server_upgrade: Several fixes, adding logrotate conf and more
	link, permissions and startup scripts stuff fixed.
	
	* DEBIAN/control: Updated to RC2, deleted old deps not used anymore.
	
	* DEBIAN/postinst: Simplified some stuff who don't work nice (startup 
	script links, logrotate missing and pandora user doesn't exist. Also problems
	with permissions with tentacle_server.
	
	* DEBIAN/prerm: Simplified, fixed problems deleting startup links.
	
	* DEBIAN/conffiles: Was not working and causes pandora_server.conf to do
	not exist in target systems. Removing it works nice.
	
	DEBian packages works 100%, tested on latest Debian Stable from scratch.
	
2009-11-07  Sancho Lerena <slerena@artica.es>

	* pandora_server_installer: A few bunch of upgrades for SUSE, added
	logrotate.d and some minor fixes.

	* pandora_server_upgrade: Some minor fixes.

	* PandoraFMS/Tools.pm: Fixes to internal SMTP Auth mechanism. 

	* util/pandora_logrotate: Much better configuration for pandora 
	logrotate config, this also rotate pandora_server.error and delete
	files after 5 days.

	* util/pandora_server: more fixes and small improvements to daemon
	script: Removed Mysql dependency on LSB, added variable for let user
	to choose timeout before KILL, and now checks for especific .conf file
	on detecting PID, this should work with several servers running in the
	same server.

	* util/plugin/ssh_pandoraplugin.sh: rewritten to use real parameters
	and be more verbose and easy to integrate in Pandora FMS Plugin server.

	* util/plugin/udp_nmap_plugin.sh: Same as above.

2009-11-06  Raul Mateos  <raulofpandora@gmail.com>

	* lib/PandoraFMS/Config.pm: Changed string from RC1 to RC2.